sonar-cxx-plugin/src/test/resources/org/sonar/plugins/cxx/reports-project/clang-tidy-reports/cpd.report.txt
sources\utils\code_chunks.cpp:20:5: error: use of undeclared identifier 'gets' [clang-diagnostic-error]
    gets(buffer); //rats violation
    ^
